[package]
name = "cryptobroker-bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serenity = { version = "0.10" }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.130"